--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^9.0.2",
     "next": "13.1.6",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
     "typescript": "4.9.5"
