--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.2",
     "next": "13.1.6",
+    "next-axiom": "^0.17.0",
     "react": "18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
