--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "eventsource-parser": "^0.1.0",
     "framer-motion": "^9.0.2",
     "next": "13.1.6",
     "next-axiom": "^0.17.0",
