--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "uid": "^2.0.2"
   }
 }
