--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
     "typescript": "4.9.5",
-    "uid": "^2.0.2"
+    "uuid": "^9.0.0"
   }
 }
