--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "react-spinners": "^0.13.8",
     "typescript": "4.9.5",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.1"
   }
 }
