--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eventsource-parser": "^0.1.0",
     "framer-motion": "^9.0.2",
     "http-adapter": "^0.0.2",
+    "keyword-extractor": "^0.0.25",
     "langchain": "^0.0.91",
     "mongodb": "^5.3.0",
     "next": "13.1.6",
