--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # env
 .env
+.env.local
 
 # testing
 /coverage
@@ -22,6 +23,8 @@
 .DS_Store
 *.pem
 .vscode
+package-lock.json
+yarn.lock
 
 # debug
 npm-debug.log*
